# pocket-figma

./: .gitignore  .gitmodules  README.md  package.json  pocket.json  tsconfig.json
app/: app.tsx  main.tsx  tiles.ts  tiles@2x.ts  touch-gesture.ts
crates/pocket-figma-psp/: Cargo.toml  Psp.toml  build.rs
crates/pocket-figma-psp/src/: main.rs
crates/pocket-figma-vita/: Cargo.toml  build.rs
crates/pocket-figma-vita/src/: capture.rs  main.rs
docs/: manifest.md
scripts/: desktop.ts  e2e-vita.ts  pocket-plan.ts  psp.ts  vita.ts
test/: golden.ts  psp-toolchain.test.ts  touch-gesture.test.ts  vita-package.test.ts
tools/: gen-assets.ts  gen-cover.ts
